@@ -5,6 +5,7 @@ import static org.openmetadata.service.apps.bundles.insights.utils.TimestampUtil
 import static org.openmetadata.service.apps.bundles.insights.utils.TimestampUtils.START_TIMESTAMP_KEY;
 import static org.openmetadata.service.workflows.searchIndex.ReindexingUtil.ENTITY_TYPE_KEY;
 import static org.openmetadata.service.workflows.searchIndex.ReindexingUtil.getInitialStatsForEntities;
+import static org.openmetadata.service.workflows.searchIndex.ReindexingUtil.getSearchIndexFields;
 
 import java.util.ArrayList;
 import java.util.Collections;
@@ -36,6 +37,7 @@ import org.openmetadata.service.apps.bundles.insights.DataInsightsApp;
 import org.openmetadata.service.apps.bundles.insights.search.DataInsightsSearchConfiguration;
 import org.openmetadata.service.apps.bundles.insights.search.DataInsightsSearchInterface;
 import org.openmetadata.service.apps.bundles.insights.utils.TimestampUtils;
+import org.openmetadata.service.apps.bundles.insights.workflows.DataInsightsWorkflow;
 import org.openmetadata.service.apps.bundles.insights.workflows.WorkflowStats;
 import org.openmetadata.service.apps.bundles.insights.workflows.dataAssets.processors.DataInsightsElasticSearchProcessor;
 import org.openmetadata.service.apps.bundles.insights.workflows.dataAssets.processors.DataInsightsEntityEnricherProcessor;
@@ -52,7 +54,7 @@ import org.openmetadata.service.workflows.interfaces.TaggedOperation;
 import org.openmetadata.service.workflows.searchIndex.PaginatedEntitiesSource;
 
 @Slf4j
-public class DataAssetsWorkflow {
+public class DataAssetsWorkflow implements DataInsightsWorkflow {
   public static final String DATA_STREAM_KEY = "DataStreamKey";
   public static final String ENTITY_TYPE_FIELDS_KEY = "EnityTypeFields";
   private static final String ALL_ENTITIES = "all";
@@ -139,7 +141,7 @@ public class DataAssetsWorkflow {
                     || entityTypesToProcess.contains(entityType))
         .forEach(
             entityType -> {
-              List<String> fields = List.of("*");
+              List<String> fields = getSearchIndexFields(entityType);
               ListFilter filter = getListFilter(entityType);
               PaginatedEntitiesSource source =
                   new PaginatedEntitiesSource(entityType, batchSize, fields, filter)
@@ -191,25 +193,33 @@ public class DataAssetsWorkflow {
   }
 
   private int computeConcurrencyBudget() {
-    int cores = Runtime.getRuntime().availableProcessors();
-    int cpuBudget = cores * 2;
+    int cpuBudget = Math.max(1, Runtime.getRuntime().availableProcessors() * 2);
 
     try {
-      int poolSize =
-          OpenMetadataApplicationConfigHolder.getInstance().getDataSourceFactory().getMaxSize();
-      if (poolSize > 0) {
-        return Math.max(4, Math.min(cpuBudget, poolSize / 2));
-      }
+      var applicationConfig = OpenMetadataApplicationConfigHolder.getInstance();
+      int poolSize = applicationConfig.getDataSourceFactory().getMaxSize();
+      int configuredBudget =
+          applicationConfig.getAsyncOperationsConfiguration().getDataInsightsMaxConcurrentDbTasks();
+      return computeConcurrencyBudget(cpuBudget, poolSize, configuredBudget);
     } catch (Exception e) {
       LOG.warn(
           "Could not determine database pool size, using default concurrency budget: {}",
           e.getMessage());
     }
-    return Math.max(4, cpuBudget);
+    return Math.min(
+        cpuBudget,
+        new org.openmetadata.service.config.AsyncOperationsConfiguration()
+            .getDataInsightsMaxConcurrentDbTasks());
   }
 
+  static int computeConcurrencyBudget(int cpuBudget, int poolSize, int configuredBudget) {
+    int databaseBudget = Math.max(1, poolSize / 10);
+    return Math.max(1, Math.min(configuredBudget, Math.min(cpuBudget, databaseBudget)));
+  }
+
+  @Override
   public void process() throws SearchIndexException {
-    if (!dataAssetsConfig.getEnabled()) {
+    if (!dataAssetsConfig.getEnabled() || stopped) {
       return;
     }
     LOG.info("[Data Insights] Processing Data Assets Insights.");
@@ -239,7 +249,7 @@ public class DataAssetsWorkflow {
           searchInterface.getEntityAttributeFields(
               dataInsightsSearchConfiguration, source.getEntityType()));
 
-      processSource(source, Collections.unmodifiableMap(new HashMap<>(contextData)), budget);
+      processSource(source, Map.copyOf(contextData), budget);
     }
   }
 
@@ -341,6 +351,23 @@ public class DataAssetsWorkflow {
       drainAndFlush(opsQueue);
     } finally {
       updateWorkflowStats(source.getName(), source.getStats());
+      mergeEnricherStepStats();
+    }
+  }
+
+  /**
+   * Surface per-step enrichment stats (e.g. {@code [Enricher] team}, {@code [Enricher]
+   * descriptionSources}) alongside the per-entity-type source stats. The enricher is shared across
+   * all entity types processed in this workflow run, so its counters are cumulative across sources
+   * — calling this in each source's finally block keeps the workflow's view of the stats current.
+   */
+  private void mergeEnricherStepStats() {
+    if (entityEnricher == null) {
+      return;
+    }
+    Map<String, StepStats> perStep = entityEnricher.getEntityStats();
+    for (Map.Entry<String, StepStats> entry : perStep.entrySet()) {
+      workflowStats.updateWorkflowStepStats("[Enricher] " + entry.getKey(), entry.getValue());
     }
   }
 
@@ -357,6 +384,7 @@ public class DataAssetsWorkflow {
     }
   }
 
+  @Override
   public void stop() {
     this.stopped = true;
     ExecutorService exec = this.executor;
